# Raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh  flake.nix  output.ppm  verify.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: project_checker.yml
examples/: cone.jsonc  example.json  example.jsonc  minimal.jsonc  museum.jsonc
include/: Error.hpp  Logger.hpp  Macro.hpp  NonCopyable.hpp  SFMLMacros.hpp  Types.hpp
src/: Main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Core/: Application.cpp  Application.hpp  Backend.cpp  Backend.hpp  Core.cpp  Core.hpp  CoreFactory.cpp  CoreFactory.hpp  CoreRender.cpp  CoreRender.hpp
src/Elements/Camera/: Camera.cpp  Camera.hpp  ImagePixel.hpp
src/Elements/Camera/Logic/: Color.cpp  Intersect.cpp  Lighting.cpp  Pathtracer.hpp
src/Elements/Camera/Logic/Functions/: Background.cpp  Color.cpp  Intersect.cpp  Lighting.cpp  Random.cpp  Reflect.cpp
src/Elements/Render/: AmbiantLight.hpp  AmbiantOcclusion.hpp  Antialiasing.hpp  Output.hpp  ReSTIR.hpp  Render.hpp  RenderConfig.hpp
src/Elements/Render/Config/: AmbiantOcclusion.hpp  Antialiasing.hpp  Lighting.hpp  Output.hpp
src/Elements/Render/Config/AmbiantOcclusion/: ReSTIR.hpp
src/Elements/Render/Config/Lighting/: AmbientOcclusion.hpp
src/Elements/Render/ReSTIR/: Spatial.hpp  Tank.cpp  Tank.hpp  Temporal.hpp
src/Elements/Render/SFML/Backend/: ABackend.cpp  ABackend.hpp  IBackend.hpp  SFMLBackend.cpp  SFMLBackend.hpp  SFMLBackendMacros.hpp
src/Elements/Render/SFML/Frontend/: AFrontend.cpp  AFrontend.hpp  IFrontend.hpp  SFMLMenu.hpp
src/Elements/Render/Structs/: ReSTIR_Tank.cpp  ReSTIR_Tank.hpp
src/Elements/Scene/: Material.hpp
src/Elements/Scene/Lights/: ALight.cpp  ALight.hpp  ILight.hpp
src/Elements/Scene/Lights/Directional/: Directional.cpp  Directional.hpp
src/Elements/Scene/Lights/Point/: Point.cpp  Point.hpp
src/Elements/Scene/Material/: Color.cpp  Color.hpp  Material.hpp
src/Elements/Scene/Materials/: Material.cpp  Material.hpp
src/Elements/Scene/Materials/BSDF/: BSDF.hpp  Sample.hpp
src/Elements/Scene/Materials/BSDF/Dielectric/: Dielectric.cpp  Dielectric.hpp
src/Elements/Scene/Materials/BSDF/Diffuse/: Diffuse.cpp  Diffuse.hpp
src/Elements/Scene/Materials/BSDF/Metal/: Metal.cpp  Metal.hpp
src/Elements/Scene/Materials/BSDF/Specular/: Specular.cpp  Specular.hpp
src/Elements/Scene/Materials/Utils/: Random.cpp  Utils.cpp  Utils.hpp
src/Elements/Scene/Shapes/: AShape.cpp  AShape.hpp  IShape.hpp  Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  STLShape.cpp  STLShape.hpp  Sphere.cpp  Sphere.hpp
src/Elements/Scene/Shapes/Cone/: Cone.cpp  Cone.hpp
src/Elements/Scene/Shapes/Cylinder/: Cylinder.cpp  Cylinder.hpp
src/Elements/Scene/Shapes/LimCylinder/: LimCylinder.cpp  LimCylinder.hpp
src/Elements/Scene/Shapes/MengerSponge/: MengerSponge.cpp  MengerSponge.hpp
src/Elements/Scene/Shapes/Plane/: Plane.cpp  Plane.hpp
src/Elements/Scene/Shapes/Rectangle/: Rectangle.cpp  Rectangle.hpp
src/Elements/Scene/Shapes/STL/: STLShape.cpp  STLShape.hpp
src/Elements/Scene/Shapes/ScrewForm/: ScrewForm.cpp  ScrewForm.hpp
src/Elements/Scene/Shapes/Sphere/: Sphere.cpp  Sphere.hpp
src/Elements/Scene/Shapes/TangleCube/: TangleCube.cpp  TangleCube.hpp
src/Elements/Scene/Shapes/Torus/: Torus.cpp  Torus.hpp
src/Elements/Scene/Shapes/Triangle/: Triangle.cpp  Triangle.hpp
src/Elements/Scene/Textures/: ITexture.hpp
src/Elements/Scene/Textures/Color/: ColorTexture.cpp  ColorTexture.hpp
src/Elements/Scene/Textures/Image/: ImageTexture.cpp  ImageTexture.hpp
src/Elements/Scene/Textures/Procedural/Chessboard/: Chessboard.cpp  Chessboard.hpp
src/Elements/Scene/Textures/Procedural/PerlinNoise/: PerlinNoise.cpp  PerlinNoise.hpp
src/Elements/Scene/Textures/Procedural/PerlinNoise/Perlin/: Perlin.cpp  Perlin.hpp
src/Elements/Scene/Textures/Skybox/Cube/: SkyboxCube.cpp  SkyboxCube.hpp
src/Elements/Scene/Textures/Skybox/Panoramic/: SkyboxPanoramic.cpp  SkyboxPanoramic.hpp
src/Materials/: AMaterial.cpp  AMaterial.hpp  Glass.hpp  IMaterial.hpp  Light.hpp
src/Maths/: Intersect.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Vector2u.cpp  Vector2u.hpp  Vector3D.cpp  Vector3D.hpp
src/Parser/: ParseArguments.cpp  ParseArguments.hpp  Parser.cpp  Parser.hpp  ParserTypes.hpp  PrintParser.cpp  PrintParser.hpp
src/RayTracer/: Rectangle.cpp
src/Scene/Camera/: Camera.cpp  Camera.hpp
src/Scene/Material/: Color.cpp  Color.hpp  Material.hpp
src/Scene/Render/: Render.hpp
src/Scene/Shapes/: AShape.cpp  AShape.hpp  IShape.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp
src/Scene/Shapes/Materials/: Glass.cpp  Light.cpp  Light.hpp
src/Shapes/: AShape.hpp  IShape.hpp  Rectangle.cpp  Rectangle.hpp  STLShape.cpp  STLShape.hpp  Sphere.cpp  Sphere.hpp
src/UI/: IWidget.hpp  UIButton.cpp  UIButton.hpp  UIContainer.cpp  UIContainer.hpp  UIManager.cpp  UIManager.hpp  UIRectangle.cpp  UIRectangle.hpp  UIScenePreview.cpp  UIScenePreview.hpp  UIText.cpp  UIText.hpp  UITextInput.cpp  UITextInput.hpp
src/UI/Events/: EventManager.cpp  EventManager.hpp  IEventObserver.hpp
src/Utils/: Error.cpp  Logger.cpp
src/bootstrap/RayTracer/: Camera.cpp  Camera.hpp  Ray.cpp  Ray.hpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp
tests/: Test_Color.cpp  Test_CoreFactory.cpp  Test_Error.cpp  Test_Logger.cpp  Test_ParseArguments.cpp  Test_Parser.cpp  Test_Plane.cpp  Test_PrintParser.cpp  Test_Ray.cpp  Test_Raytracer.cpp  Test_ReSTIR_Tank.cpp  Test_Rectangle.cpp  Test_SFMLMacros.cpp  Test_Sphere.cpp  Test_Tank.cpp  Test_Texture.cpp  Test_UI.cpp  Test_Utils.cpp  Test_Vector2u.cpp  Test_Vector3D.cpp
tests/test-examples/: test.jsonc  test.stl
